# turboref

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  esbuild.config.mjs  install.sh  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: citation.rs  config.rs  definition_tag.rs  document.rs  i18n.rs  lib.rs  renderer.rs  resolver.rs  template.rs  types.rs
crates/core/src/parser/: equation.rs  figure.rs  listing.rs  mod.rs  scan.rs  section.rs  table.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
demo/: TurboRef-Demo.md
doc/: IMPLEMENTATION.md  demo-citeproc.md  demo.bib
src/: bridge.ts  config.ts  main.ts  settings.ts  suggest.ts
src/__mocks__/: obsidian.ts
src/bib/: cache.ts  open-external.ts  parser.ts  renderer.ts  resolver.ts  types.ts
src/bib/__tests__/: parser.test.ts  renderer.test.ts  resolver.test.ts
src/listeners/: image.ts  table.ts
src/renderer/: live-mode.ts  reading-mode.ts  widgets.ts
src/renderer/__tests__/: reading-mode.test.ts
